[package]
name = "rbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
prettytable-rs = "0.10.0"
reqwest = { version = "0.11.18", features = ["serde_json", "json", "blocking", "socks"] }
scraper = "0.17.1"
serde = { version = "1.0.178", features = ["derive"] }
